--- a/ct-user-groups-api.html
+++ b/ct-user-groups-api.html
@@ -1,4 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../iron-ajax/iron-ajax.html">
+<link rel="import" href="../ct-core-utils/ct-api-provider-behaviour.html">
+<link rel="import" href="../ct-core-utils/ct-user-identity.html">
 
 <!--
 `ct-user-groups-api`
@@ -9,26 +12,55 @@ Element containing user groups API calls
 
 <dom-module id="ct-user-groups-api">
   <template>
-    <style>
-      :host {
-        display: block;
-      }
-    </style>
-    <h2>Hello [[prop1]]!</h2>
+    <ct-user-identity id="identity"></ct-user-identity>
+
+    <iron-ajax id="updateUserGroup"></iron-ajax>
+    <iron-ajax id="deleteUserFromGroup"></iron-ajax>
+
   </template>
 
   <script>
-    Polymer({
+      Polymer({
 
-      is: 'ct-user-groups-api',
+          is: 'ct-user-groups-api',
+          behaviors: [CT.Behaviours.ApiProvider],
 
-      properties: {
-        prop1: {
-          type: String,
-          value: 'ct-user-groups-api',
-        },
-      },
+          /**
+           * Join users to a group
+           *
+           * @param {String} groupId
+           *
+           * @param {String[]} params
+           * @param {String} params[].userId
+           *
+           * @returns {Promise}
+           */
+          updateUserGroup: function(groupId, params) {
+              this.$.updateUserGroup.url = this._url('/user-groups/'+groupId+'/users' );
+              this.$.updateUserGroup.method = 'PUT';
+              this.$.updateUserGroup.contentType = "application/json";
+              this.$.updateUserGroup.body = params;
+              return this._generateRequest(this.$.updateUserGroup);
+          },
 
-    });
+          /**
+           * Remove users from a group
+           *
+           * @param {String} groupId
+           *
+           * @param {String[]} params
+           * @param {String} params[].userId
+           *
+           * @returns {Promise}
+           */
+          deleteUserFromGroup: function(groupId, params) {
+              this.$.deleteUserFromGroup.url = this._url('/user-groups/'+id+'/users' );
+              this.$.deleteUserFromGroup.method = 'DELETE';
+              this.$.deleteUserFromGroup.contentType = "application/json";
+              this.$.deleteUserFromGroup.body = params;
+              return this._generateRequest(this.$.deleteUserFromGroup);
+          },
+
+      });
   </script>
 </dom-module>
